Adjusting theming feature

--- a/source/index.html
+++ b/source/index.html
@@ -7,15 +7,19 @@
 </head>
 <body>
 <header>
-	<nav>
-	    <ul class="navbar-brand">
-	        <li><a href="#">Brand</a></li>
-	    </ul>
-	    <ul class="navbar-links">
-	        <li><a href="#">Home</a></li>
-	        <li><a href="#">About</a></li>
-	        <li><a href="#">Contact</a></li>
-	    </ul>
+	<nav class="orange-theme">
+		<div class="navbar-brand">
+			<ul>
+				<li><a href="#">Brand</a></li>
+			</ul>
+		</div>
+		<div class="navbar-links"> 
+			<ul>
+				<li><a href="#">Home</a></li>
+				<li><a href="#">About</a></li>
+				<li><a href="#">Contact</a></li>
+			</ul>
+		</div>
 	</nav>
 </header>
 </body>
